--- a/style.css
+++ b/style.css
@@ -1,15 +1,32 @@
 html, body {
-  margin: 10;
+  margin: 0;
   padding: 0;
-  background-color: #A7C8F2;
+  background-color: #6B98F2;
 }
+/* A7C8F2 */
 h1{
-  font-family: 'Rubik Mono One', sans-serif;
+  font-size: 50px;
+  font-family: 'Princess Sofia', cursive;
+  color: #E6F2DC;
 }
 p{
-  font-family: 'Chakra Petch', sans-serif;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
+  font-size: 15px;
 }
 canvas {
   display: block;
   margin: auto;
+}
+
+button {
+  margin: auto;
+  display: block;
+  margin-top: 5px;
+  padding: 15px;
+  color: black;
+  background-color: #F2A2E5;
+  border-style: none;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
+
+
 }
