--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@ p{
 h5{
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
   font-size: 11px;
-  margin-left: 200px;
+  /* margin-left: 420px; */
+  width: 590px;
+  padding:20px;
+  background-color: #E6F2DC;
+
 }
 canvas {
   display: block;
@@ -24,7 +28,7 @@ canvas {
 }
 img {
 width: 20%;
-margin-left: 300px;
+margin-left: 0px;
 }
 
 button {
@@ -34,7 +38,7 @@ button {
   padding: 15px;
   color: black;
   background-color: #F2A2E5;
-  border-style: none;
+  border-style:double;
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
 
 
